<?xml version="1.0"?>
<package format="2">
  <name>ekf_hsr</name>
  <version>0.0.1</version>
  <description>The EKF HSR</description>

  <maintainer email="visser@cs.miami.edu">Ubbo Visser</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend> <!-- Added this line -->
  <exec_depend>geometry_msgs</exec_depend> <!-- Added this line -->
</package>
